multiple spacing fixes on main container

--- a/force-app/main/default/lwc/homePage/homePage.css
+++ b/force-app/main/default/lwc/homePage/homePage.css
@@ -1,5 +1,6 @@
 .sidebar-second{   
     width: 30%;
+    margin: 3px;
     /* order: 1; */
     color: var(--secondary-color); 
     background: white;
@@ -17,7 +18,6 @@
     .flex-content3 {
       display: flex;
       flex-direction: column;
-      background: var(--primary-color);
       color: var(--secondary-color); 
       align-self: center;
       align-items: center;
@@ -28,11 +28,9 @@
       align-self: center;
       color: var(--secondary-color); 
       background: #ebecee;
-      background: #002855;
     }
     .main{
       width: 90vw;
-      background: var(--primary-color);
       align-self: center;
       align-items: center;
     }
@@ -40,6 +38,5 @@
 
   .flex-content3 {
     display: flex;
-    background: var(--primary-color);
     color: var(--secondary-color); 
   }
